<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".track.TrackActivity">

    <ImageView
        android:id="@+id/imgTrack"
        android:layout_width="@dimen/cientoveinte_dp"
        android:layout_height="@dimen/cientoveinte_dp"
        android:src="@drawable/icon_spotify"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:layout_marginTop="@dimen/diez_dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/imagen_pista" />

    <TextView
        android:id="@+id/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/doce_dp"
        android:layout_marginEnd="@dimen/ocho_dp"
        android:layout_marginStart="@dimen/ocho_dp"
        android:layout_marginBottom="@dimen/ocho_dp"
        android:text="@string/id"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgTrack" />

    <TextView
        android:id="@+id/txtId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/doce_dp"
        android:layout_marginEnd="@dimen/ocho_dp"
        android:layout_marginStart="@dimen/ocho_dp"
        android:layout_marginBottom="@dimen/ocho_dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/id"
        app:layout_constraintTop_toBottomOf="@+id/imgTrack" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ocho_dp"
        android:text="@string/name"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/id"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ocho_dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/txtId"
        app:layout_constraintStart_toEndOf="@id/name" />

    <TextView
        android:id="@+id/artista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ocho_dp"
        android:text="@string/artists"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtArtista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ocho_dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/txtName"
        app:layout_constraintStart_toEndOf="@id/name" />

    <TextView
        android:id="@+id/fechaAnadido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ocho_dp"
        android:text="@string/added_at"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/artista" />

    <TextView
        android:id="@+id/txtFechaAnadido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ocho_dp"
        android:layout_marginStart="80dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/fechaAnadido"
        app:layout_constraintTop_toBottomOf="@+id/txtArtista" />

    <TextView
        android:id="@+id/idAnadido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ocho_dp"
        android:text="@string/added_by"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/fechaAnadido"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtIdAnadido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ocho_dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/txtFechaAnadido"
        app:layout_constraintStart_toEndOf="@id/idAnadido" />

    <TextView
        android:id="@+id/album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ocho_dp"
        android:text="@string/album"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/idAnadido"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtAlbum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ocho_dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/txtIdAnadido"
        app:layout_constraintStart_toEndOf="@id/album" />

    <TextView
        android:id="@+id/numeroPista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/number_track"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/album" />

    <TextView
        android:id="@+id/txtNumeroPista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ocho_dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/txtAlbum"
        app:layout_constraintStart_toEndOf="@id/numeroPista" />

    <TextView
        android:id="@+id/typeTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ocho_dp"
        android:text="@string/type"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/numeroPista"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtTypeTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ocho_dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/txtNumeroPista"
        app:layout_constraintStart_toEndOf="@id/typeTrack" />

    <TextView
        android:id="@+id/uriTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ocho_dp"
        android:text="@string/uri"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/typeTrack"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtUriTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ocho_dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/txtTypeTrack"
        app:layout_constraintStart_toEndOf="@id/uriTrack" />

</androidx.constraintlayout.widget.ConstraintLayout>