<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.UserActivity">

    <ImageView
        android:id="@+id/imgUser"
        android:layout_width="@dimen/cientoveinte_dp"
        android:layout_height="@dimen/cientoveinte_dp"
        android:src="@drawable/icon_spotify"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:layout_marginTop="@dimen/diez_dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/imagen_usuario" />

    <TextView
        android:id="@+id/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/doce_dp"
        android:layout_marginEnd="@dimen/ocho_dp"
        android:layout_marginStart="@dimen/ocho_dp"
        android:layout_marginBottom="@dimen/ocho_dp"
        android:text="@string/id"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgUser" />

    <TextView
        android:id="@+id/txtId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/doce_dp"
        android:layout_marginEnd="@dimen/ocho_dp"
        android:layout_marginStart="@dimen/ocho_dp"
        android:layout_marginBottom="@dimen/ocho_dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/id"
        app:layout_constraintTop_toBottomOf="@+id/imgUser"  />

    <TextView
        android:id="@+id/displayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ocho_dp"
        android:text="@string/name"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/id"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtDisplayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ocho_dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/txtId"
        app:layout_constraintStart_toEndOf="@id/displayName" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ocho_dp"
        android:text="@string/email"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/displayName"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ocho_dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/txtDisplayName"
        app:layout_constraintStart_toEndOf="@id/email" />

    <TextView
        android:id="@+id/followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ocho_dp"
        android:text="@string/followers"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtFollowers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ocho_dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/txtEmail"
        app:layout_constraintStart_toEndOf="@id/followers" />

    <TextView
        android:id="@+id/product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ocho_dp"
        android:text="@string/product"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/followers"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ocho_dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/product"
        app:layout_constraintTop_toBottomOf="@id/txtFollowers" />

    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ocho_dp"
        android:text="@string/type"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/product"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ocho_dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/txtProduct"
        app:layout_constraintStart_toEndOf="@id/type" />

    <TextView
        android:id="@+id/uri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ocho_dp"
        android:text="@string/uri"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/type"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtUri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ocho_dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/txtType"
        app:layout_constraintStart_toEndOf="@id/uri" />

    <TextView
        android:id="@+id/titlePlaylists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playlists"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/dieciocho_sp"
        android:layout_marginTop="@dimen/quince_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUri" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerPlaylists"
        android:layout_width="match_parent"
        android:layout_height="@dimen/cero_dp"
        android:layout_marginTop="@dimen/quince_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titlePlaylists" />

</androidx.constraintlayout.widget.ConstraintLayout>