<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".playlist.PlaylistsActivity">

    <ImageView
        android:id="@+id/imgPlaylist"
        android:layout_width="@dimen/cientoveinte_dp"
        android:layout_height="@dimen/cientoveinte_dp"
        android:src="@drawable/icon_spotify"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:layout_marginTop="@dimen/diez_dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/imagen_playlist" />

    <TextView
        android:id="@+id/idTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/doce_dp"
        android:layout_marginEnd="@dimen/ocho_dp"
        android:layout_marginStart="@dimen/ocho_dp"
        android:layout_marginBottom="@dimen/ocho_dp"
        android:text="@string/id"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgPlaylist" />

    <TextView
        android:id="@+id/txtIdTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/doce_dp"
        android:layout_marginEnd="@dimen/ocho_dp"
        android:layout_marginStart="@dimen/ocho_dp"
        android:layout_marginBottom="@dimen/ocho_dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/idTrack"
        app:layout_constraintTop_toBottomOf="@+id/imgPlaylist" />

    <TextView
        android:id="@+id/nameTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ocho_dp"
        android:text="@string/name"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/txtIdTrack"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtNameTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ocho_dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/nameTrack"
        app:layout_constraintTop_toBottomOf="@id/txtIdTrack" />

    <TextView
        android:id="@+id/ownerIdTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ocho_dp"
        android:text="@string/id_owner"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/txtNameTrack"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtOwnerIdTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ocho_dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/txtNameTrack"
        app:layout_constraintStart_toEndOf="@id/ownerIdTrack" />

    <TextView
        android:id="@+id/publicoTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/publico"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/txtOwnerIdTrack"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtPublicoTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ocho_dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/txtOwnerIdTrack"
        app:layout_constraintStart_toEndOf="@id/publicoTrack" />

    <TextView
        android:id="@+id/collaborativeTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ocho_dp"
        android:text="@string/collaborative"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/txtPublicoTrack"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtCollaborativeTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ocho_dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/txtPublicoTrack"
        app:layout_constraintStart_toEndOf="@id/collaborativeTrack" />

    <TextView
        android:id="@+id/typeTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ocho_dp"
        android:text="@string/type"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/txtCollaborativeTrack"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtTypeTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ocho_dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/txtCollaborativeTrack"
        app:layout_constraintStart_toEndOf="@id/typeTrack" />

    <TextView
        android:id="@+id/uriTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ocho_dp"
        android:text="@string/uri"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/txtTypeTrack"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtUriTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ocho_dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/txtTypeTrack"
        app:layout_constraintStart_toEndOf="@id/uriTrack" />

    <TextView
        android:id="@+id/titleTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pistas"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/dieciocho_sp"
        android:layout_marginTop="@dimen/quince_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUriTrack" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerTracks"
        android:layout_width="match_parent"
        android:layout_height="@dimen/cero_dp"
        android:layout_marginTop="@dimen/quince_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTrack" />

</androidx.constraintlayout.widget.ConstraintLayout>